--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -19,14 +19,14 @@
       /* Bundler mode */
       "moduleResolution": "Bundler",
       "allowImportingTsExtensions": true,
-      "isolatedModules": true,
+      "isolatedModules": false,
       "moduleDetection": "force",
       "noEmit": true,
       "jsx": "react-jsx",
       /* Linting */
       "strict": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
       "noFallthroughCasesInSwitch": true,
       "noUncheckedSideEffectImports": true
     },
