--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test:db": "node scripts/verifyConnection.js",
-    "setup:users": "node scripts/testMongoDB.js"
+    "setup:users": "node scripts/testMongoDB.js",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.10.0",
     "mongoose": "^7.5.0",
     "socket.io": "^4.7.2"
   },
