--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,43 +1,21 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "composite": true,
+    "jsx": "react-jsx",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "moduleResolution": "bundler",
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      /* Bundler mode */
-      "moduleResolution": "node",
-      "allowImportingTsExtensions": true,
-      "isolatedModules": false,
-      "moduleDetection": "force",
-      "noEmit": true,
-      "jsx": "react-jsx",
-      /* Linting */
-      "strict": true,
-      "noUnusedLocals": false,
-      "noUnusedParameters": false,
-      "noFallthroughCasesInSwitch": true,
-      "noUncheckedSideEffectImports": true
+      "@/*": ["./src/*"]
     },
-    "include": [
-      "next-env.d.ts",
-      "*/.ts",
-      "*/.tsx",
-      ".next/types/*/.ts"
-    ],
-    "exclude": [
-      "node_modules"
-    ]
-  }
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
