userRole bugs fixed

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://order-management-system-turkishtale.onrender.com/api
-VITE_SOCKET_URL=https://order-management-system-turkishtale.onrender.com
+VITE_API_URL=44.226.145.213/api
+VITE_SOCKET_URL=44.226.145.213
