--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test:db": "node scripts/verifyConnection.js",
-    "setup:users": "node scripts/testMongoDB.js",
-    "seed": "node scripts/seed.js"
+    "dev": "nodemon server.js"
+
+
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
